dataset1235/2025-2/2947369575/users/809660776/executions/1003782500_4233865845.log
== SUBMISSION (2025-08-26 23:47:03)
-- CODE: 
celsius = float(input("x: "))
fahrenheit = celsius * (9/5) + 32
print(f"y: {fahrenheit:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
x: y: -40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
x: y: 14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
x: y: 212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
x: y: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
x: y: 32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
x: y: 86.90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 23:46:47)
-- CODE: 
celsius = float(input("x: "))
fahrenheit = celsius * (9/5) + 32
print(f"y: {fahrenheit:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
x: y: -40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
x: y: 14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
x: y: 212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
x: y: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
x: y: 32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
x: y: 86.90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 23:50:23)
-- CODE: 
celsius = float(input(x))
fahrenheit = celsius * (9/5) + 32
print(f:y" {fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    print(f:y" {fahrenheit:.2f}")
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    print(f:y" {fahrenheit:.2f}")
           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    print(f:y" {fahrenheit:.2f}")
           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    print(f:y" {fahrenheit:.2f}")
           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(f:y" {fahrenheit:.2f}")
           ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    print(f:y" {fahrenheit:.2f}")
           ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 23:45:57)
-- CODE: 
celsius = float(input("x"))
fahrenheit = celsius * (9/5) + 32
print(f"y: {fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
xy: -40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
xy: 14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
xy: 212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
xy: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
xy: 32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
xy: 86.90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 23:45:31)
-- CODE: 
celsius = float(input("x"))
fahrenheit = celsius * (9/5) + 32
print(fahrenheit"y: {fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    print(fahrenheit"y: {fahrenheit:.2f}")
                    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    print(fahrenheit"y: {fahrenheit:.2f}")
                    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    print(fahrenheit"y: {fahrenheit:.2f}")
                    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    print(fahrenheit"y: {fahrenheit:.2f}")
                    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(fahrenheit"y: {fahrenheit:.2f}")
                    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    print(fahrenheit"y: {fahrenheit:.2f}")
                    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 23:46:38)
-- CODE: 
celsius = float(input("x: "))
fahrenheit = celsius * (9/5) + 32
print(f"y: {fahrenheit:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
x: y: -40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
x: y: 14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
x: y: 212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
x: y: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
x: y: 32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
x: y: 86.90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 23:50:09)
-- CODE: 
celsius = float(input())
fahrenheit = celsius * (9/5) + 32
print(f:" {fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    print(f:" {fahrenheit:.2f}")
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    print(f:" {fahrenheit:.2f}")
           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    print(f:" {fahrenheit:.2f}")
           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    print(f:" {fahrenheit:.2f}")
           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(f:" {fahrenheit:.2f}")
           ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    print(f:" {fahrenheit:.2f}")
           ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 23:49:36)
-- CODE: 
celsius = float(input())
fahrenheit = celsius * (9/5) + 32
print(f: {fahrenheit:.2f})
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    print(f: {fahrenheit:.2f})
                          ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    print(f: {fahrenheit:.2f})
                          ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    print(f: {fahrenheit:.2f})
                          ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    print(f: {fahrenheit:.2f})
                          ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(f: {fahrenheit:.2f})
                          ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    print(f: {fahrenheit:.2f})
                          ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
